--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	<meta name="apple-mobile-web-app-title" content="Sprint It" />
-	<link rel="apple-touch-icon" href="/favicon.svg" />
+	<link rel="apple-touch-icon" href="/images/pwa-192x192.png" />
 	<title>Sprint It</title>
 </head>
 
