--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<link rel="icon" type="image/png" href="/images/pwa-192x192.png" />
+	<link rel="icon" type="image/png" href="/images/pwa-192x192.png?v=%VITE_APP_VERSION%" />
 	<link rel="manifest" href="/manifest.json" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="theme-color" content="#33c7ff" />
+	<meta name="theme-color" content="#05759eff" />
 	<meta name="mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	<meta name="apple-mobile-web-app-title" content="Sprint It" />
-	<link rel="apple-touch-icon" href="/images/pwa-192x192.png" />
+	<link rel="apple-touch-icon" href="/images/pwa-192x192.png?v=%VITE_APP_VERSION%" />
 	<title>Sprint It</title>
 </head>
 
